helm-charts/charts/docker-registry/manifests/middleware-add-registry-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-registry-prefix
  namespace: docker-registry
spec:
  replacePathRegex:
    regex: ^/v2/(.*)
    replacement: /registry/v2/$1
