helm-charts/charts/docker-registry/manifests/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: docker-registry
spec:
  stripPrefix:
    prefixes:
      - /registry
