helm-charts/charts/docker-registry/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: docker-registry-strip-prefix@kubernetescrd
  name: docker-registry-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: localk8s.localdomain
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /registry
        pathType: Prefix
  tls:
  - hosts:
    - localk8s.localdomain
    secretName: registry-tls
